<resources>
    <string name="app_name">Classic Calculator</string>
    <string name="button_on">ON / C</string>
    <string name="button_backspace">‹-</string>
    <string name="button_9">9</string>
    <string name="button_8">8</string>
    <string name="button_7">7</string>
    <string name="button_6">6</string>
    <string name="button_5">5</string>
    <string name="button_4">4</string>
    <string name="button_3">3</string>
    <string name="button_2">2</string>
    <string name="button_1">1</string>
    <string name="button_0">0</string>
    <string name="button_.">.</string>
    <string name="button_equalTo">=</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">x</string>
    <string name="button_divide">/</string>
    <string name="divide_by_zero">CAN\'T DIVIDE BY ZERO</string>
    <string name="maximum_number_limit">Maximum number limit reached</string>
    <string name="wrong_expression">WRONG EXPRESSION</string>
    <string name="github"> <a href ="https://github.com/im-arjun">GitHub</a></string>
    <string name="instagram"> <a href ="https://www.instagram.com/arjunsasidharan_/?hl=en">Instagram</a></string>
    <string name="about_us_text">Hello, My name is Arjun, I\'m the one who created this app. This is a simple calculator app with basic functions. This app has similar interface of normal pocket calculator we use in daily life.</string>

</resources>