<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/background">
    <include layout="@layout/app_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeMinTextSize="14sp"
        android:autoSizeTextType="uniform"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:text="@string/about_us_text"
        android:typeface="normal"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeTextType="uniform" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="8dp"
    android:paddingLeft="8dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Follow me on :"
        android:paddingRight="8dp"
        />
    <TextView
        android:id="@+id/instagram_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="8dp"
        android:linksClickable="true"
        android:text="@string/instagram" />
    <TextView
        android:id="@+id/github_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:text="@string/github" />

</LinearLayout>

    <TextView
        android:id="@+id/feedback_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeMinTextSize="14sp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        app:autoSizeTextType="uniform"
        android:layout_gravity="end"/>

</LinearLayout>